name:                protop
version:             0.1.0.0
synopsis:            topos programming
description:         Please see README.md
homepage:            https://github.com/brunjlar/protop
license:             BSD3
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          brunjlar@gmail.com
copyright:           2016 by Dr. Lars Brünjes
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Protop
  other-modules:       Protop.Compositions
                     , Protop.Equalizers
                     , Protop.Exponentials
                     , Protop.Identities
                     , Protop.Monos
                     , Protop.Morphisms
                     , Protop.Natural
                     , Protop.Objects
                     , Protop.Omega
                     , Protop.Products
                     , Protop.Proofs
                     , Protop.Reflexivities
                     , Protop.Setoids
                     , Protop.Symmetries
                     , Protop.Terminal
                     , Protop.Transitivities
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/brunjlar/protop
