name:                protop
version:             0.1.0.0
synopsis:            topos programming
description:         Please see README.md
homepage:            https://github.com/brunjlar/protop
license:             BSD3
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          brunjlar@gmail.com
copyright:           2016 by Dr. Lars Brünjes
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Protop
                     , Protop.Core
                     , Protop.Core.Compositions
                     , Protop.Core.Equalizers
                     , Protop.Core.Exponentials
                     , Protop.Core.Identities
                     , Protop.Core.Monos
                     , Protop.Core.Morphisms
                     , Protop.Core.Natural
                     , Protop.Core.Objects
                     , Protop.Core.Omega
                     , Protop.Core.Products
                     , Protop.Core.Proofs
                     , Protop.Core.Reflexivities
                     , Protop.Core.Setoids
                     , Protop.Core.Symmetries
                     , Protop.Core.Terminal
                     , Protop.Core.Transitivities
                     , Protop.Logic
                     , Protop.Logic.Model
                     , Protop.Logic.Types
                     , Protop.Utility
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , ghc-typelits-natnormalise
                     , hspec
  default-language:    Haskell2010

test-suite protop-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , protop
  other-modules:       Protop.Core.NaturalSpec
                     , Protop.Core.OmegaSpec
                     , Protop.Logic.TypesSpec
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/brunjlar/protop
