name:                protop
version:             0.1.0.0
synopsis:            topos programming
description:         Please see README.md
homepage:            https://github.com/brunjlar/protop
license:             MIT
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          brunjlar@gmail.com
copyright:           2016 by Dr. Lars Brünjes
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Protop
                     , Protop.Core
                     , Protop.Core.Compositions
                     , Protop.Core.Equalizers
                     , Protop.Core.Exponentials
                     , Protop.Core.Identities
                     , Protop.Core.Monos
                     , Protop.Core.Morphisms
                     , Protop.Core.Natural
                     , Protop.Core.Objects
                     , Protop.Core.Omega
                     , Protop.Core.Products
                     , Protop.Core.Proofs
                     , Protop.Core.Reflexivities
                     , Protop.Core.Setoids
                     , Protop.Core.Singleton
                     , Protop.Core.Symmetries
                     , Protop.Core.Terminal
                     , Protop.Core.Transitivities
                     , Protop.DSL
                     , Protop.Utility
  other-modules:       Protop.DSL.Core
                     , Protop.DSL.Kind
                     , Protop.DSL.Signature
                     , Protop.DSL.Expression
  ghc-options:         -Wall -O2 -Wno-unticked-promoted-constructors
  build-depends:       base >= 4.7 && < 5
                     , constraints
                     , containers
                     , hspec
                     , mtl
                     , operational
                     , transformers
  default-language:    Haskell2010
  default-extensions:  TypeOperators
                     , ConstraintKinds
                     , DeriveAnyClass
                     , DeriveGeneric
                     , GADTs
                     , KindSignatures
                     , TypeFamilies
                     , ScopedTypeVariables
                     , FlexibleContexts
                     , FlexibleInstances
                     , PolyKinds
                     , DataKinds
                     , StandaloneDeriving
                     , TypeSynonymInstances
                     , RankNTypes
                     , TypeApplications
                     , MultiParamTypeClasses
                     , FunctionalDependencies

test-suite protop-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , mtl
                     , protop
  other-modules:       Protop.Core.NaturalSpec
                     , Protop.Core.OmegaSpec
                     , Protop.DSL.CoreSpec
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                     , RankNTypes

source-repository head
  type:     git
  location: https://github.com/brunjlar/protop
